--- a/projecten/index.html
+++ b/projecten/index.html
@@ -53,6 +53,10 @@
         at, ultricies ullamcorper nulla. Maecenas ut sodales elit. Maecenas tincidunt sit amet eros et finibus. Quisque ipsum nisi, dignissim et interdum in, lacinia ut turpis. Donec lacus arcu, pharetra nec libero sit amet, mollis efficitur augue. Nunc
         tincidunt maximus ligula, vel condimentum est pulvinar sed. Nullam aliquet tellus sed mi posuere, eget bibendum lectus porta. Sed tristique venenatis odio, in auctor mauris. Ut libero dui, ornare ac orci a, molestie tempor felis. Aenean a commodo
         leo.</p>
+      <p>Vivamus bibendum augue venenatis, lobortis urna vulputate, vestibulum est. Duis id ornare ante. Morbi nisi urna, porta ut pretium vel, auctor id lectus. Donec lorem neque, ornare ac sem ut, tristique efficitur nisl. Duis sem metus, gravida at diam
+        at, ultricies ullamcorper nulla. Maecenas ut sodales elit. Maecenas tincidunt sit amet eros et finibus. Quisque ipsum nisi, dignissim et interdum in, lacinia ut turpis. Donec lacus arcu, pharetra nec libero sit amet, mollis efficitur augue. Nunc
+        tincidunt maximus ligula, vel condimentum est pulvinar sed. Nullam aliquet tellus sed mi posuere, eget bibendum lectus porta. Sed tristique venenatis odio, in auctor mauris. Ut libero dui, ornare ac orci a, molestie tempor felis. Aenean a commodo
+        leo.</p>
     </div>
     <div class="col-md-2"></div>
   </div>
